# sssfile

./: .clang-format  .gitignore  README.md
src/: CMakeLists.txt
src/cmake/Modules/: FindCatch.cmake  FindRapidXML.cmake
src/python/: CMakeLists.txt  setup.py
src/python/bindings/: main.c  main.cpp
src/python/tests/: test_module.py
src/python/tests/data/: sss-2.0.xml
src/sssfile/: CMakeLists.txt
src/sssfile/include/: column_builder.h  sss_string.h
src/sssfile/include/sssfile/: column_builder.h  column_metadata.h  error_codes.h  metadata_reader.h
src/sssfile/src/: column_builder.cpp  common.h  error_codes.cpp  metadata_reader.cpp  sss_string.cpp  utf_conversion.cpp  utf_conversion.h
src/sssfile/test/: column_builder_test.cpp  common_test.cpp  metadata_reader_test.cpp  sss_string_test.cpp  utf_conversion_test.cpp
